tests/NormalTests/paczka1/fuzzy1/11226983.err
Error in line 3: zGCdt9R S700 8,3
Error in line 7: nXdpiZq S191 12,4
Error in line 12: IY8k A541 46,6
Error in line 5: zGCdt9R S324 96,2
Error in line 20: zGCdt9R S700 56,2
Error in line 25: IY8k S191 5,69
Error in line 19: A541 S191 19,1
Error in line 26: A541 S700 85,2
Error in line 24: zGCdt9R S324 51,7
Error in line 22: IY8k S191 3,6
